# raylib-pointers

./: .prettierrc  CMakeLists.txt  LICENSE  README.md  package.json  raylib.js  raylib_bun.js  test.js
.github/workflows/: release.yml  todo.yml
src/: lib.c  structColor.h  structTexture2D.h  structs.h
test/: ffi.json  raylib.js  test.js
tools/: api.json  gen_api.js  gen_bun.js  gen_lib.js  shared.js
